--- a/exercicios/ex22/fundo01.html
+++ b/exercicios/ex22/fundo01.html
@@ -4,25 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Imagem de Fundo</title>
+    <title></title>
     <style>
-        div.quadrado{
-            display: inline-block;
-            border: 1px solid black;
-            
+        body{
+            background-image: url(img/wallpaper002.jpg);
+            background-size: 100px 100px;
+            background-repeat: repeat-x;
         }
     </style>
 </head>
 <body>
-    
-    <div class="quadrado">
-
-    </div>
-    <div class="quadrado">
-
-    </div>
-    <div class="quadrado">
-
-    </div>
+    <h1>Aplicação de Fundo</h1>
 </body>
 </html>
