--- a/exercicios/ex22/index2.html
+++ b/exercicios/ex22/index2.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Imagem de Fundo</title>
     <style>
+        body{
+            background-image: url(img/wallpaper001.jpg);
+        }
         div.quadrado{
             display: inline-block;
             border: 2px solid black;
@@ -14,14 +17,14 @@
             width: 300px;
             height: 300px;
         }
-        div.q1{
+        div#q1{
             background-color: skyblue;
         }
-        div.q2{
+        div#q2{
             background-image: linear-gradient(to bottom,yellow,red);
         }
-        div.q3{
-            background-image: url(img/pattern001.png);
+        div#q3{
+            background-image: url(img/pattern003.png);
         }
     </style>
 </head>
