--- a/exercicios/exercicio010/android01.html
+++ b/exercicios/exercicio010/android01.html
@@ -85,7 +85,7 @@
        </article>
    </main>
    <footer>
-    Site criado por <a href="https://github.com/gustavoguanabara/html-css/tree/master/aulas-pdf" target="_blank">Gustavo Guanabara</a> para o <a href="https://www.youtube.com/channel/UCrWvhVmt0Qac3HgsjQK62FQ" target="_blank">Will.Gmoes_7</a>.
+    Site criado por <a href="https://github.com/willgomes73" target="_blank">Will Gomes</a> para o <a href="https://www.instagram.com/will.gomes_7/" target="_blank">Will.Gmoes_7</a>.
    </footer>
 </body>
 </html>
