--- a/exercicios/ex22/fundo06.html
+++ b/exercicios/ex22/fundo06.html
@@ -4,23 +4,30 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo Fixio na Tela</title>
     <style>
         body{
             height: 100vh;
-            background-color: black;
+           /* background-color: black;
             background-image: url('img/wallpaper002.jpg');
+            background-position: center center;
+            background-repeat:no-repeat;
+            background-size: cover;
+            background-attachment: fixed;
+            
+            shorthand (color,image,position,repeat,size,attajmant)*/
+
+            background: black url('img/wallpaper002.jpg') center center no-repeat fixed;
+            background-size: cover;
         }
-        main{
+         main{
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid black;
             border-radius: 15px;
-            background-position: center top;
-            background-repeat: no-repeat;
-            background-size: cover;
+
         }
     </style>
 </head>
@@ -28,8 +35,22 @@
     <main>
         <h1>Imagem de Fundo</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!    
-        </p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolores error, voluptas exercitationem aliquid dolore alias. Blanditiis adipisci laborum, incidunt reprehenderit iste, dolore dolorum eum explicabo ullam repellendus unde similique placeat?
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt culpa ab recusandae quod modi at est, eos veniam nihil repellat, provident animi ex tempore dolor sequi nam maiores eius. Quia!</p>
+        
     </main>
 </body>
 </html>
