--- a/exercicios/ex22/fundo07.html
+++ b/exercicios/ex22/fundo07.html
@@ -10,7 +10,7 @@
             background-image: url('img/target001.png');
             background-size: 100% 100%;
             position: relative;
-            height: 500px;
+            height: 96vh;
             padding: 10px;
             background-color: purple;       
         }
@@ -22,8 +22,10 @@
             width: 400px;
             background-color: yellow;
             
-            left: 100px;/*distancia da borda até bloco*/
-            top: 200px;/*distancia da top até bloco*/
+            left: 50%;/*distancia da borda até bloco*/
+            top: 50%;/*distancia da top até bloco*/
+
+            transform: translate(-50%,-50%);
         }
     </style>
 </head>
