--- a/exercicios/ex23 tabela/tabrla0020.html
+++ b/exercicios/ex23 tabela/tabrla0020.html
@@ -22,10 +22,13 @@
             font-weight: bold;
             padding: 10px;
             background-color: lightgray;
-        }
+         }
         thead, tfoot{
             background-color: #383838;
             color: white;
+        }
+        tbody > tr:nth-child(2n) {
+            background-color: lightgray;
         }
         td.num{
             text-align: right;
@@ -33,13 +36,13 @@
     </style>
 </head>
 <body>
-    <h1>Uso de T abelas Grandes</h1>
+    <h1>Uso de Tabelas Grandes</h1>
     <!--
         ANATOMIA PARA TABELAS GRANDES
         TABLE
             CAPTION 
             THEAD
-                TR, TD, TH 
+                TR, (TD dados), (TH titulo) 
             TBODY
                 TR, TD, TH
             TFOOT  
@@ -50,8 +53,8 @@
             População das Unidades Federativas
         </caption>
         <thead>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">População</th>
         </thead>
         <tbody>
             <tr>
@@ -165,7 +168,7 @@
 
         </tbody>
         <tfoot>
-            <th>Total de Habitantes</th>
+            <th scope="row">Total de Habitantes</th>
             <td class="num"><strong>214.128.750</strong></td>
         </tfoot>
     </table>
