--- a/exercicios/ex23 tabela/tabrla020.html
+++ b/exercicios/ex23 tabela/tabrla020.html
@@ -28,7 +28,10 @@
             background-color: #383838;
             color: white;
         }
-        thead > tr > th{}
+        thead > tr > th{
+            position: sticky;
+            
+        }
         tbody > tr:nth-child(2n) {
             background-color: lightgray;
         }
